2013-01-19  Roland Clobus <rclobus@rclobus.nl>
	* client/gtk/connect.c: Clear the list of games and set focus to the
	dialog with the list of games when changing the meta server.

2013-01-18  Roland Clobus <rclobus@rclobus.nl>
	* client/ai/ai.c, client/ai/greedy.c, common/gtk/theme.h: Cleanup of
	some warnings generated by --enable-warnings=full.

2013-01-17  Roland Clobus <rclobus@rclobus.nl>
	* common/game.h: Fixed building due to missing ssize_t on armel.

2012-12-18  Roland Clobus <rclobus@rclobus.nl>
	* server/main.c, server/avahi.c, server/develop.c, server/meta.c,
	server/turn.c, server/admin.c, server/player.c, server/buildutil.c,
	server/gtk/main.c, server/server.c, server/server.h,
	client/gtk/interface.c, client/gtk/resource-table.c,
	client/gtk/resource-table.h, client/gtk/resource-view.gob,
	client/gtk/frontend.h, client/gtk/avahi.c, client/gtk/audio.h,
	client/gtk/avahi-browser.c, client/gtk/settingscreen.c,
	client/gtk/connect.c, client/common/callback.c, client/common/client.c,
	client/common/develop.c, client/common/client.h, client/common/stock.c,
	client/common/main.c, client/ai/ai.c, client/ai/greedy.c,
	client/callback.h, editor/gtk/editor.c, common/gtk/game-rules.c,
	common/gtk/game-settings.c, common/gtk/guimap.c, common/quoteinfo.c,
	common/game.c, common/map.c, common/game.h, common/state.c,
	common/log.c, common/map.h, common/state.h, common/log.h,
	common/network.c, common/cards.c, common/network.h, common/cards.h,
	common/map_query.c: Cleanup of some warnings generated by
	--enable-warnings=full. No need for time(NULL) initialization of random
	seed anymore as Glib takes care of that now. Moved debug function to
	log.h. Moved private definition of StateMachine to code file. Fixed
	datatype in ai code for better evaluation of opponents hex tiles.

2012-11-01  Roland Clobus <rclobus@rclobus.nl>
	* admin-scripts/list.sh, admin-scripts/kill-game.sh, 
	admin-scripts/locallobby.sh, admin-scripts/remotelobby.sh,